# BeehiveMonitoring

./: readme.md
cv-code/: CMakeLists.txt  Object.cpp  Object.h  Webcam.cpp
ml-code/: crontab.template  env.sh.template  process_data.py  readme.md  start.sh
