cmake_minimum_required(VERSION 2.8)
project( Webcam )
find_package ( Threads REQUIRED )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_library( Object Object.cpp )
target_link_libraries( Object ${OpenCV_LIBS} )
add_executable( Webcam Webcam.cpp )
target_link_libraries( Webcam ${CMAKE_THREAD_LIBS_INIT} )
target_link_libraries( Webcam ${OpenCV_LIBS} )
target_link_libraries( Webcam Object )
